<resources>
    <string name="app_name">paycrypt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title">Login Form</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">The password cannot be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Paycrypt in android is on develop!</string>
</resources>